[tool.poetry]
name = "excel-dependency"
version = "0.1.0"
description = ""
authors = ["tanomitsu2002 <64388900+tanomitsu@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.5"
networkx = "^3.3"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
jinja2 = "^3.1.4"
ipython = "^8.26.0"
jsonpickle = "^3.2.2"
pyvis = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
